--- a/frontend/src/app/modules/shared/components/button-column/button-column.component.scss
+++ b/frontend/src/app/modules/shared/components/button-column/button-column.component.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  overflow: hidden;
+
+  &.rounded {
+    border-radius: 12px;
+  }
 }
