--- a/frontend/src/app/modules/shared/components/button-row/button-row.component.scss
+++ b/frontend/src/app/modules/shared/components/button-row/button-row.component.scss
@@ -1,3 +1,10 @@
 :host {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  overflow: hidden;
+  
+  &.rounded {
+    border-radius: 12px;
+  }
 }
