--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -5,6 +5,9 @@
   --primary-2: #8CF2F6;
   --primary-2-rgb: 140, 242, 246;
 
+  --primary-2-dark: #0A777B;
+  --primary-2-dark-rgb: 10, 119, 123;
+
   --mobile-breakpoint: 1000px;
 
   &.dark {
