--- a/frontend/src/app/modules/catalog/modules/patterns/pages/patterns/patterns.page.scss
+++ b/frontend/src/app/modules/catalog/modules/patterns/pages/patterns/patterns.page.scss
@@ -1,3 +1,13 @@
 :host {
   display: block;
 }
+
+.no-results-hint {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--contrast);
+  border-radius: 12px;
+  padding: 8px;
+  text-align: center;
+}
