--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -20,6 +20,9 @@
     --contrast-lower: #181818;
     --contrast-lower-rgb: 24, 24, 24;
 
+    --contrast-mid: #2C2C2C;
+    --contrast-mid-rgb: 44, 44, 44;
+
     --background: #222222;
     --background-rgb: 34, 34, 34;
 
@@ -41,6 +44,9 @@
 
     --contrast-lower: #F0F0F0;
     --contrast-lower-rgb: 240, 240, 240;
+
+    --contrast-mid: #E0E0E0;
+    --contrast-mid-rgb: 224, 224, 224;
 
     --background: #EAEAEA;
     --background-rgb: 234, 234, 234;
