--- a/frontend/src/app/modules/shared/components/dropdown/dropdown.component.scss
+++ b/frontend/src/app/modules/shared/components/dropdown/dropdown.component.scss
@@ -81,6 +81,7 @@ app-button {
     flex-direction: row;
     align-items: center;
     gap: 8px;
+    padding: 8px;
 
     .dropdown-item-prefix {
       flex: 0 0 auto;
