--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -87,3 +87,26 @@ select {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 -960 960 960' width='24'><path fill='white' d='M480-345 240-585l56-56 184 184 184-184 56 56-240 240Z'/></svg>");
   }
 }
+
+input[type="text"],
+input[type="password"] {
+  appearance: none;
+  background-color: var(--contrast);
+  color: var(--text);
+  border-radius: 12px;
+  padding: 12px 16px;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  outline: 2px solid transparent;
+  transition: background-color 0.3s ease-out, outline-color 0.2s ease-out;
+  margin: 2px;
+
+  &:hover {
+    background-color: var(--contrast-lower);
+  }
+
+  &:focus {
+    outline-color: var(--primary-2);
+  }
+}
