--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -2,11 +2,17 @@
   --primary-1: #FF4E43;
   --primary-1-rgb: 255, 78, 67;
 
+  --primary-1-dark: #71221C;
+  --primary-1-dark-rgb: 113, 34, 28;
+
   --primary-2: #8CF2F6;
   --primary-2-rgb: 140, 242, 246;
 
-  --primary-2-dark: #0A777B;
-  --primary-2-dark-rgb: 10, 119, 123;
+  --primary-2-dark: #05777B;
+  --primary-2-dark-rgb: 5, 119, 123;
+
+  --primary-3: #66CC99;
+  --primary-3-rgb: 102, 204, 153;
 
   --mobile-breakpoint: 1000px;
 
