--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -7,3 +7,4 @@
 <app-footer></app-footer>
 
 <app-overlay-container [parentElement]="elementRef.nativeElement"></app-overlay-container>
+<app-notification-outlet></app-notification-outlet>
