--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -100,7 +100,6 @@ input[type="password"] {
   font-size: inherit;
   outline: 2px solid transparent;
   transition: background-color 0.3s ease-out, outline-color 0.2s ease-out;
-  margin: 2px;
 
   &:hover {
     background-color: var(--contrast-lower);
@@ -109,4 +108,21 @@ input[type="password"] {
   &:focus {
     outline-color: var(--primary-2);
   }
+
+  &:disabled {
+    background-color: var(--contrast-lower);
+    cursor: not-allowed;
+    color: var(--contrast-mid);
+  }
+}
+
+.material-icons {
+  font-size: 20px;
+}
+
+.icon-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
