--- a/frontend/src/app/modules/shared/components/dropdown/dropdown.component.scss
+++ b/frontend/src/app/modules/shared/components/dropdown/dropdown.component.scss
@@ -40,7 +40,7 @@ app-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--primary-2-dark);
+  color: var(--primary-2-sub);
 }
 
 .single-selection-indicator {
