--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -10,6 +10,8 @@
 
 .actual-header {
   width: 100%;
+  background-color: var(--header);
+  transition: background-color 0.5s ease-in-out;
 
   &.sticky {
     position: fixed;
@@ -19,7 +21,8 @@
     backdrop-filter: blur(8px);
     animation: slide-in 0.5s ease-out;
     border-bottom: 1px solid rgba(var(--text-rgb), 0.2);
-    background-color: rgba(var(--background-low-contrast-rgb), 0.2);
+    background-color: rgba(var(--header), 0.3);
+    transition: background-color 0.5s ease-in-out;
 
     nav {
       a {
@@ -38,17 +41,6 @@ nav {
     border-width: 2px 2px;
     border-style: solid;
     border-color: transparent;
-
-    transition: border-color 0.3s ease-out;
-
-    &.active {
-      border-color: var(--text);
-    }
-
-    &:hover {
-      text-decoration: none;
-      border-color: var(--text);
-    }
   }
 }
 
