--- a/frontend/src/app/modules/admin/modules/topics/pages/details/details.page.scss
+++ b/frontend/src/app/modules/admin/modules/topics/pages/details/details.page.scss
@@ -39,6 +39,34 @@ h3 {
   gap: 12px;
 }
 
+.input-label-group {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+
 .hidden {
   display: none;
+}
+
+@media only screen and (max-width: 1000px) {
+  .actions {
+    flex-direction: column;
+    align-items: stretch;
+
+    & > span {
+      width: 100%;
+
+      & > app-button {
+        width: 100%;
+      }
+    }
+  }
+
+  .form-group {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
