--- a/frontend/src/app/modules/shared/components/notification-outlet/notification-outlet.component.html
+++ b/frontend/src/app/modules/shared/components/notification-outlet/notification-outlet.component.html
@@ -4,6 +4,8 @@
        [class.error]="notification.isError()"
        [class.success]="notification.isSuccess()"
        [class.info]="notification.isInfo()">
-    {{ notification.message }}
+    <div class="notification-content">
+      {{ notification.message }}
+    </div>
   </div>
 }
