--- a/frontend/src/app/modules/shared/components/notification-outlet/notification-outlet.component.scss
+++ b/frontend/src/app/modules/shared/components/notification-outlet/notification-outlet.component.scss
@@ -8,39 +8,53 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .notification {
-  margin: 18px;
+  margin: 32px 24px;
   border-radius: 12px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
   max-width: 400px;
-  padding: 12px 16px;
-  background-color: var(--primary-3);
   animation: slide-in 0.2s ease-out;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
+  background-color: var(--contrast);
+  border-width: 4px;
+  border-style: solid;
+  color: var(--text);
 
   &.info {
-    background-color: var(--contrast);
-    color: white;
+    border-color: var(--contrast);
   }
 
   &.success {
-    background-color: var(--primary-3);
-    color: black;
+    border-color: var(--primary-3);
+
+    .notification-content {
+      background-color: rgba(var(--primary-3-rgb), 0.2);
+    }
   }
 
   &.warn {
-    background-color: var(--primary-2-dark);
-    color: white;
+    border-color: var(--primary-2-sub);
+
+    .notification-content {
+      background-color: rgba(var(--primary-2-sub-rgb), 0.2);
+    }
   }
 
   &.error {
-    background-color: var(--primary-1);
-    color: white;
+    border-color: var(--primary-1);
+
+    .notification-content {
+      background-color: rgba(var(--primary-1-rgb), 0.2);
+    }
   }
+}
+
+.notification-content {
+  padding: 12px 16px;
 }
 
 @keyframes slide-in {
