--- a/frontend/src/app/modules/admin/modules/colors/pages/details/details.page.scss
+++ b/frontend/src/app/modules/admin/modules/colors/pages/details/details.page.scss
@@ -39,6 +39,13 @@ h3 {
   gap: 12px;
 }
 
+.color-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .input-label-group {
   display: flex;
   width: 100%;
