--- a/frontend/src/app/modules/admin/modules/colors/pages/colors/colors.page.scss
+++ b/frontend/src/app/modules/admin/modules/colors/pages/colors/colors.page.scss
@@ -20,7 +20,9 @@ ul.colors-list {
   li {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 12px;
     cursor: pointer;
     border-bottom: 1px solid var(--background-low-contrast);
     padding: 12px 16px;
