--- a/frontend/src/app/modules/admin/modules/colors/pages/create/create.page.html
+++ b/frontend/src/app/modules/admin/modules/colors/pages/create/create.page.html
@@ -3,6 +3,13 @@
 <form class="create-color-form">
   <hr>
 
+  <div class="form-group color-group">
+    <app-color-picker [size]="128"
+                      [color]="getColorValue() | async"
+                      (colorChanged)="updateColor($event)">
+    </app-color-picker>
+  </div>
+
   <div class="form-group">
     <label for="name">Name</label>
     <input #name
