WiP image upload for fabrics

--- a/frontend/src/app/modules/admin/modules/colors/pages/details/details.page.html
+++ b/frontend/src/app/modules/admin/modules/colors/pages/details/details.page.html
@@ -9,7 +9,7 @@
 
       <hr>
 
-      <div class="form-group color-group">
+      <div class="color-group">
         <app-color-picker [size]="128"
                           [color]="color.toValue()"
                           (colorChanged)="updateColor(color, $event)">
