--- a/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
@@ -55,3 +55,16 @@ h3 {
   width: 800px;
   height: 800px;
 }
+
+.image-container {
+  border-radius: 12px;
+  overflow: hidden;
+  aspect-ratio: 1;
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+}
