--- a/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/create/create.page.scss
@@ -68,3 +68,9 @@ h3 {
   align-items: center;
   padding: 10px 0;
 }
+
+.color-dropdown-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
