--- a/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.html
+++ b/frontend/src/app/modules/admin/modules/fabrics/pages/details/details.page.html
@@ -9,9 +9,20 @@
 
       <hr>
 
-      <div class="image-container">
-        <img [src]="getImageUrl(fabric.image)" width="100%" alt="Bild des Stoffs">
-      </div>
+      @if (isEditingImage() | async) {
+        <app-image-upload (uploaded)="onImageUploaded(fabric, $event)"></app-image-upload>
+      } @else {
+        <div class="image-container">
+          @if (getImageId() | async; as imageId) {
+            <img [src]="getImageUrl(imageId)" width="100%" alt="Bild des Stoffs">
+          } @else {
+            <img [src]="getImageUrl(fabric.image)" width="100%" alt="Bild des Stoffs">
+          }
+        </div>
+        <div>
+          <app-button (click)="editImage()">Bild ändern</app-button>
+        </div>
+      }
 
       <form class="name-form" (submit)="false">
         <div class="form-group">
@@ -39,6 +50,96 @@
                 [disabled]="cannotUpdateName() | async">
         </button>
       </form>
+
+      <div class="topics-container">
+        <h4>Themen</h4>
+
+        @if (isLoadingAvailableTopics() | async) {
+          <div class="loading-container">
+            <app-loading-spinner></app-loading-spinner>
+          </div>
+        } @else {
+          @if (getAvailableTopics() | async; as topics) {
+            @if (getSelectedTopics() | async; as selectedTopics) {
+              <app-chips [chips]="topicsToChips(selectedTopics)"
+                         [available]="topicsToChips(topics)"
+                         [alwaysShowOptions]="true"
+                         [chipDropdownItemTemplateRef]="topicDropdownItemTemplateRef"
+                         (removed)="onTopicRemoved(fabric, selectedTopics, $event)"
+                         (added)="onTopicAdded(fabric, selectedTopics, $event)">
+                <ng-template let-chip>
+                  {{ chip.label }}
+                </ng-template>
+              </app-chips>
+
+              <ng-template #topicDropdownItemTemplateRef let-chip>
+                {{ chip.label }}
+              </ng-template>
+            }
+          }
+        }
+      </div>
+
+      <div class="colors-container">
+        <h4>Farben</h4>
+
+        @if (isLoadingAvailableColors() | async) {
+          <div class="loading-container">
+            <app-loading-spinner></app-loading-spinner>
+          </div>
+        } @else {
+          @if (getAvailableColors() | async; as colors) {
+            @if (getSelectedColors() | async; as selectedColors) {
+              <app-chips [chips]="colorsToChips(selectedColors)"
+                         [available]="colorsToChips(colors)"
+                         [alwaysShowOptions]="true"
+                         [chipDropdownItemTemplateRef]="colorDropdownItemTemplateRef"
+                         (removed)="onColorRemoved(fabric, selectedColors,$event)"
+                         (added)="onColorAdded(fabric, selectedColors,$event)">
+                <ng-template let-chip>
+                  {{ chip.label }}
+                </ng-template>
+              </app-chips>
+
+              <ng-template #colorDropdownItemTemplateRef let-chip>
+                <div class="color-dropdown-item">
+                  <app-color-badge [color]="chip.content"></app-color-badge>
+                  {{ chip.label }}
+                </div>
+              </ng-template>
+            }
+          }
+        }
+      </div>
+
+      <div class="fabric-type-availability-container">
+        <h4>Verfügbarkeit</h4>
+
+        @if (isLoadingAvailableFabricTypes() | async) {
+          <div class="loading-container">
+            <app-loading-spinner></app-loading-spinner>
+          </div>
+        } @else {
+          @if (getAvailableFabricTypes() | async; as fabricTypes) {
+            @if (getSelectedFabricTypes() | async; as selectedFabricTypes) {
+              <app-chips [chips]="fabricTypesToChips(selectedFabricTypes)"
+                         [available]="fabricTypesToChips(fabricTypes)"
+                         [alwaysShowOptions]="true"
+                         [chipDropdownItemTemplateRef]="fabricTypeDropdownItemTemplateRef"
+                         (removed)="onFabricTypeRemoved(fabric, selectedFabricTypes, $event)"
+                         (added)="onFabricTypeAdded(fabric, selectedFabricTypes,$event)">
+                <ng-template let-chip>
+                  {{ chip.label }}
+                </ng-template>
+              </app-chips>
+
+              <ng-template #fabricTypeDropdownItemTemplateRef let-chip>
+                {{ chip.label }}
+              </ng-template>
+            }
+          }
+        }
+      </div>
 
       <hr>
 
